--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "markdown-it-to-djot-ast",
+  "name": "markdown-to-djot-ast",
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
