--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "esbuild": "^0.20.2",
     "jest": "^29.7.0",
     "markdown-it": "^14.1.0",
+    "markdown-it-sub": "^2.0.0",
     "minimist": "^1.2.8",
     "ts-jest": "^29.1.2",
     "tsx": "^4.7.2",
