--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "esbuild": "^0.20.2",
     "jest": "^29.7.0",
     "markdown-it": "^14.1.0",
+    "markdown-it-ins": "^4.0.0",
     "markdown-it-mark": "^4.0.0",
     "markdown-it-sub": "^2.0.0",
     "markdown-it-sup": "^2.0.0",
