--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "markdown-to-djot-ast",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "license": "MIT",
   "author": "Bernhard Berger",
   "description": "A lightweight Javascript/Typescript library to convert Markdown content into a djot.js AST",
@@ -11,29 +11,27 @@
     "markdown",
     "markdown-it"
   ],
-  "files": [
-    "dist"
-  ],
+  "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist/",
+    "README.md",
+    "LICENSE"
+  ],
   "scripts": {
-    "build": "tsc && node ./esbuild.js --dev",
-    "build:meta": "node ./esbuild.js --dev --meta",
-    "build:meta:prod": "node ./esbuild.js --meta",
-    "build:prod": "node ./esbuild.js",
-    "start": "node ./esbuild.js --dev --watch --run",
-    "start:ci": "node ./esbuild.js --run",
-    "start:prod": "node ./esbuild.js --watch --run",
+    "lint": "tsc --emitDeclarationOnly",
+    "build": "tsc --emitDeclarationOnly && esbuild src/index.ts --bundle --platform=node --format=esm --outfile=dist/index.js",
+    "dev": "run-p dev:*",
+    "dev:tsc": "tsc --watch --preserveWatchOutput",
+    "dev:node": "node --watch dist/index.js",
+    "dev:esbuild": "pnpm run build --watch",
     "test": "jest",
     "printAst": "tsx examples/printAst.ts ./examples/test.md"
   },
   "devDependencies": {
-    "@djot/djot": "^0.3.1",
-    "@es-exec/esbuild-plugin-start": "^0.0.5",
-    "@types/jest": "^29.5.12",
-    "@types/markdown-it": "^14.0.1",
-    "@types/node": "^20.12.7",
     "esbuild": "^0.20.2",
+    "npm-run-all": "^4.1.5",
     "jest": "^29.7.0",
     "markdown-it": "^14.1.0",
     "markdown-it-ins": "^4.0.0",
@@ -44,5 +42,11 @@
     "ts-jest": "^29.1.2",
     "tsx": "^4.7.2",
     "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "@types/jest": "^29.5.12",
+    "@types/markdown-it": "^14.0.1",
+    "@types/node": "^20.12.7",
+    "@djot/djot": "^0.3.1"
   }
 }
