--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,18 @@
 {
   "compilerOptions": {
+    /* Base Options: */
+    "esModuleInterop": true,
+    "skipLibCheck": true,
     "target": "es2022",
-    "module": "es2022",
+    "allowJs": true,
+    "moduleDetection": "force",
     "declaration": true,
-    "outDir": "./dist",
-    "moduleResolution": "node",
-    "lib": ["dom", "es2022"],
-    "experimentalDecorators": true,
-    "noUnusedLocals": true,
-    "removeComments": true,
-    "strict": true,
-    "typeRoots": ["node_modules/@types"],
-    "useDefineForClassFields": false,
-    "esModuleInterop": true
+    /* If your code doesn't run in the DOM: */
+    "lib": ["es2022"],
+    "outDir": "dist",
+    "moduleResolution": "NodeNext",
+    "module": "NodeNext"
   },
-  "include": ["src/**/*.ts", "examples/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["src/**/*.test.ts"]
 }
