--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "markdown-to-djot-ast",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "license": "MIT",
   "author": "Bernhard Berger",
   "description": "A lightweight Javascript/Typescript library to convert Markdown content into a djot.js AST",
@@ -30,8 +30,8 @@
     "printAst": "tsx examples/printAst.ts ./examples/test.md"
   },
   "devDependencies": {
+    "@mdit/plugin-alert": "^0.13.1",
     "esbuild": "^0.20.2",
-    "npm-run-all": "^4.1.5",
     "jest": "^29.7.0",
     "markdown-it": "^14.1.0",
     "markdown-it-ins": "^4.0.0",
@@ -39,14 +39,15 @@
     "markdown-it-sub": "^2.0.0",
     "markdown-it-sup": "^2.0.0",
     "minimist": "^1.2.8",
+    "npm-run-all": "^4.1.5",
     "ts-jest": "^29.1.2",
     "tsx": "^4.7.2",
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@djot/djot": "^0.3.1",
     "@types/jest": "^29.5.12",
     "@types/markdown-it": "^14.0.1",
-    "@types/node": "^20.12.7",
-    "@djot/djot": "^0.3.1"
+    "@types/node": "^20.12.7"
   }
 }
