--- a/package.json
+++ b/package.json
@@ -26,28 +26,29 @@
     "dev:tsc": "tsc --watch --preserveWatchOutput",
     "dev:node": "node --watch dist/index.js",
     "dev:esbuild": "pnpm run build --watch",
-    "test": "jest",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "printAst": "tsx examples/printAst.ts ./examples/test.md"
   },
   "devDependencies": {
-    "@mdit/plugin-alert": "^0.13.1",
-    "esbuild": "^0.20.2",
-    "jest": "^29.7.0",
-    "markdown-it": "^14.1.0",
+    "@mdit/plugin-alert": "^0.22.4",
+    "@types/jest": "^30.0.0",
+    "esbuild": "^0.27.3",
+    "jest": "^30.2.0",
+    "markdown-it": "^14.1.1",
     "markdown-it-ins": "^4.0.0",
     "markdown-it-mark": "^4.0.0",
     "markdown-it-sub": "^2.0.0",
     "markdown-it-sup": "^2.0.0",
     "minimist": "^1.2.8",
     "npm-run-all": "^4.1.5",
-    "ts-jest": "^29.1.2",
-    "tsx": "^4.7.2",
-    "typescript": "^5.4.5"
+    "ts-jest": "^29.4.6",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3"
   },
   "dependencies": {
-    "@djot/djot": "^0.3.1",
-    "@types/jest": "^29.5.12",
-    "@types/markdown-it": "^14.0.1",
-    "@types/node": "^20.12.7"
-  }
+    "@djot/djot": "^0.3.2",
+    "@types/markdown-it": "^14.1.2",
+    "@types/node": "^25.3.0"
+  },
+  "packageManager": "pnpm@10.28.1+sha512.7d7dbbca9e99447b7c3bf7a73286afaaf6be99251eb9498baefa7d406892f67b879adb3a1d7e687fc4ccc1a388c7175fbaae567a26ab44d1067b54fcb0d6a316"
 }
